--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="#values">Valeurs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#concours">Concours</a>
+                        <a class="nav-link" href="#concours">Charte Graphique</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -315,7 +315,7 @@
       <div class="col-lg-12 text-center mb-5">
         <h2 class="section-title">Galerie des Logos</h2>
         <div class="section-divider"></div>
-        <p class="section-subtitle">
+        <p class="section-subtitle" id="concours">
           Découvrez les logos proposés avec leurs palettes de couleurs.
         </p>
       </div>
