--- a/index.html
+++ b/index.html
@@ -16,8 +16,35 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* 1. Déclaration des keyframes pour l’effet d’inclinaison */
+@keyframes tilt {
+  0%   { transform: translateY(0) rotate(0deg); }
+  25%  { transform: translateY(-2px) rotate(5deg); }
+  50%  { transform: translateY(0) rotate(0deg); }
+  75%  { transform: translateY(-2px) rotate(-5deg); }
+  100% { transform: translateY(0) rotate(0deg); }
+}
+
+/* 2. Classe pour déclencher l’animation */
+.animate-tilt {
+  animation: tilt 1.5s ease-in-out infinite;
+}
+
+    </style>
 </head>
 <body>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+  // Récupère l’élément
+  const themeSwitcher = document.getElementById('themeSwitcher');
+  // Petite temporisation si besoin (là c'est immédiat)
+  setTimeout(() => {
+    themeSwitcher.classList.add('animate-tilt');
+  }, 200); // 200ms après le chargement, pour un effet plus fluide
+});
+
+    </script>
 
     <!-- Sélecteur de thème flottant -->
     <div id="themeSwitcher" class="theme-switcher">
@@ -70,6 +97,7 @@
     <section id="home" class="hero-section">
         <div class="hero-background"></div>
         <div class="container">
+            <br>
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6 text-center text-lg-start">
                     <div class="hero-content">
